--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,18 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-    <servlet>
-        <servlet-name>comingsoon</servlet-name>
-        <servlet-class>it.dstech.courses.servlet.example.PrimaServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>comingsoon</servlet-name>
-        <url-pattern>/*</url-pattern>
-    </servlet-mapping>
+	version="3.1">
+	<servlet>
+		<servlet-name>comingsoon</servlet-name>
+		<servlet-class>it.dstech.courses.servlet.example.PrimaServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>comingsoon</servlet-name>
+		<url-pattern>/comingsoon</url-pattern>
+	</servlet-mapping>
+
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
 </web-app>
